# star-hash

./: README.md  debug_astronomy.py  debug_moon.py  pyproject.toml  update_stars.py  verify_deep_time.py
star_hash/: cli.py
star_hash/core/: planets.py  projection.py  stars.py
star_hash/data/: navigational_stars.csv
star_hash/render/: svg.py
